# monocular_pi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
app/: simulate_camera.py  stream_all.py  stream_and_record.py  stream_camera.py  stream_imu.py  stream_imu_i2c.py  stream_imu_rvc.py  stream_imu_uart.py
src/: __init__.py  camera.py  imu.py  imu_comm.py  sensor.py
src/io/: __init__.py  io_element.py
src/io_element/: __init__.py  img_feature_detector.py  io_element.py  livestreamer.py  log_handler.py  recorder.py  sensor.py
src/io_elements/: __init__.py  io_element.py  live_streamer.py  recorder.py  sensor.py
src/log_handler/: log_handler.py
src/messages/: __init__.py  circle_annotation_msg.proto  circle_annotation_msg.py  color_msg.proto  color_msg.py  compressed_img_msg.proto  img_annotation_msg.proto  img_annotation_msg.py  imu_msg.proto  imu_msg.py  log_msg.proto  point2_msg.proto  point2_msg.py  points_annotation_msg.proto  points_annotation_msg.py  quaternion_msg.proto  quaternion_msg.py  vector3d_msg.proto  vector3d_msg.py
src/recorder/: __init__.py  mcap_recorder.py  msg_parser.py
src/recorder/foxglove/: CompressedImage_pb2.py  Log_pb2.py  __init__.py  imu_message.proto
src/sensors/: __init__.py  camera.py  camera_async.py  imu.py  imu_async.py  sensor.py  sensor_async.py
src/subscribers/: subscriber.py
